--- a/reports_app/static/css/detail_report.css
+++ b/reports_app/static/css/detail_report.css
@@ -7,3 +7,35 @@
     top: 60px;
     width: calc(100%-220px);
 }
+.student-card {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    padding: 10px;
+    align-items: center;
+}
+.student-card h5 {
+    width: 100px;
+}
+.successful-a {
+    width: 500px;
+    height: 20px;
+    background-color: white;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    gap: 2px;
+    padding: 0;
+    overflow: hidden;
+    border: 3px white solid;
+}
+.answer {
+    width: 100%;
+    height: 100%;
+}
+.correct {
+    background-color: #28f200;
+}
+.wrong {
+    background-color: red;
+}
