--- a/reports_app/static/css/detail_report.css
+++ b/reports_app/static/css/detail_report.css
@@ -1,11 +1,101 @@
 * {
     color: white;
 }
-.report {
+.wrapper{
     position: absolute;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 40px;
+    gap: 10px;
     left: 220px;
-    top: 60px;
-    width: calc(100%-220px);
+    top: 45px;
+    width: calc(100% - 220px);
+
+}
+.wrapper h2{
+    font-size: 26px;    
+    font-weight: 300;
+    color: #D5D5D5;
+}
+.wrapper h1{
+    font-size: 36px;    
+    font-weight: 500;
+    
+}
+.report{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    
+    align-items: center; 
+
+    padding: 10px 20px 30px;
+    gap: 10px;
+    background-color: #3A3A3A;
+    border-radius: 30px;
+
+}
+
+.header-report{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+
+}
+.tabs{
+    display: flex;
+    gap: 10px;
+}
+.selected{
+    color: #9C47FF;
+    border: none;
+    border-bottom: #9C47FF 5px solid;
+    
+}
+.not {
+    color: #AFAFAF;
+    border: none;
+}
+
+.tab{
+    font-size: 22px;
+    font-weight: 300;
+    border-radius: 5px;
+    
+    background: none;
+    padding: 10px;
+}
+.sorting{
+    display: flex;
+    align-items: center;
+}
+.sorting p{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 20px;
+    padding: 10px;
+    font-size: 18px;
+    font-weight: 300;
+
+}
+
+#sortBtn{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 5px 15px;
+    background-color: #505050;
+    border-radius: 8px;
+    border: white 1px solid;
+    cursor: pointer;
+}
+.judah {
+    
 }
 .student-card {
     display: flex;
