--- a/reports_app/static/css/detail_report.css
+++ b/reports_app/static/css/detail_report.css
@@ -94,9 +94,9 @@
     border: white 1px solid;
     cursor: pointer;
 }
-.judah {
+/* .judah {
     
-}
+} */
 .student-card {
     display: flex;
     flex-direction: row;
@@ -128,4 +128,54 @@
 }
 .wrong {
     background-color: red;
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+}
+
+/* окошко */
+.modal-content {
+    position: absolute;
+    bottom: -100%; /* спрятано */
+    left: 0;
+    width: 100%;
+    background: #fff;
+    padding: 20px;
+    border-radius: 12px 12px 0 0;
+    box-shadow: 0 -2px 10px rgba(0,0,0,0.3);
+    transition: bottom 0.4s ease-in-out;
+    max-height: 80%;
+    overflow-y: auto;
+}
+
+/* анимация выезда */
+.modal.show .modal-content {
+    bottom: 0;
+}
+.modal-answer {
+    color: black;
+}
+b {
+    color: black;
+}
+/* крестик */
+.close {
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    color: #333;
+}
+.close:hover {
+    color: red;
+}
+#modalAnswers {
+    color: black;
 }
