--- a/execution_app/static/css/execution.css
+++ b/execution_app/static/css/execution.css
@@ -21,12 +21,10 @@
 }
 
 body{
-    
     background-image: url("../images/code_background2.jpg");
     background-color: #1A1A1A;
     background-size: cover;
     background-position: center;
-
 }
 
 header{
@@ -119,21 +117,41 @@ main {
 
 #lobby {
     position: absolute;
-    top: 50%;
+    display: flex;
+    gap: 10px;
+    padding: 20px;
+    flex-direction: column;
+    top: 15.83%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
-    min-height: 200px;
-    background-color: rgba(0, 0, 0, 0.7);
+    transform: translateX(-50%);
+    width: 300px;
+    max-height: 700px;
+    background-color: #252525;
     border-radius: 15px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s   ease;
     color: white;
-    font-size: 24px;
-    text-align: center;
 }
-
+#lobby h1 {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+}
+#lobby h2 {
+    text-align: start;
+    font-size: 20px;
+    font-weight: 500;
+}
+#lobby ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 0;
+    margin: 0;
+    max-height: 600px;
+    overflow-y: auto;
+}
 
 #waitingDiv {
     display: flex;
@@ -163,3 +181,115 @@ main {
     color: white;
 }
 
+#general {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 0;
+    width: 80vw;
+    height: 49vh;
+    transform: translate(-50%, -50%);
+}
+
+#question {
+    position: relative;
+    display: flex;
+
+    width: 100%;
+    height: 50%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    padding: 20px;
+    background-color: #252525;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    color: white;
+    overflow-y: auto;
+}
+#question h2 {
+    font-family: "Inter";
+    font-weight: bold;     
+    font-size: 28px;
+    text-align: center;
+}
+#answers {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    height: 50%;
+}
+#answers button {
+    flex: 1;
+    height: 100%;
+    font-family: "Inter";
+    font-size: 24px;
+    font-weight: bold;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+#answerBtn1 {
+    background-color: #2C70AD;
+}
+#answerBtn2 {
+    background-color: #EEA928;
+}
+#answerBtn3 {
+    background-color: #22CE00;
+}
+#answerBtn4 {
+    background-color: #D4546D;
+}
+#answers label {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    height: 100%;
+    font-family: "Inter";
+    font-size: 24px;
+    font-weight: bold;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+#answers input[type="checkbox"]:checked {
+    opacity: 1;
+}
+#answers input[type="checkbox"] {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    background-color: #000000;
+    opacity: 0.4;
+    border: #000000 solid 3px;
+    border-radius: 5px;
+    transform: scale(1.5);
+}
+#sendBtn {
+    position: absolute;
+    right: 0;
+    bottom: -80px;
+    width: 180px;
+    height: 50px;
+    padding: 0 10px 0 10px;
+    font-family: "Inter";
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #ffffff;
+    color: #262626;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
