--- a/execution_app/static/css/execution.css
+++ b/execution_app/static/css/execution.css
@@ -205,9 +205,6 @@ main {
     justify-content: center;
     gap: 15px;
     padding: 20px;
-    background-color: #252525;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     color: white;
     overflow-y: auto;
 }
@@ -277,18 +274,67 @@ main {
     border-radius: 5px;
     transform: scale(1.5);
 }
+
+#general {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    gap: 15px;
+
+    width: 920px;
+    height: 465px;
+
+    padding: 15px;
+    transition: all 0.3s;
+}
+
+#general.fill {
+    background-color: #323232;
+    border-radius: 15px;
+}
+
+#question {
+    background-color: #323232;
+    border-radius: 15px;
+}
+
+#textAnswer {
+    display: flex;
+    font-size: 28px;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    padding: 20px 30px;
+    gap: 10px;
+    width: 100%;
+    height: 200px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    outline: 2px solid transparent;
+    transition: all 0.4s;
+}
+
+#textAnswer:focus {
+    outline: 5px solid #646464;
+}
+
 #sendBtn {
     position: absolute;
+    text-wrap: nowrap;
     right: 0;
-    bottom: -80px;
-    width: 180px;
-    height: 50px;
-    padding: 0 10px 0 10px;
+    bottom: -120px;
+    width: auto;
+    height: 50px !important;
+    padding: 0 20px;
     font-family: "Inter";
     font-size: 20px;
     font-weight: bold;
     background-color: #ffffff;
-    color: #262626;
+    color: #262626 !important;
     border: none;
     border-radius: 10px;
     cursor: pointer;
