--- a/execution_app/templates/enter_nickname.html
+++ b/execution_app/templates/enter_nickname.html
@@ -107,6 +107,7 @@
                     generalDiv.appendChild(sendBtn);
 
                 } else if (data.type === "enter answer") {
+                    generalDiv.classList.add('fill');
                     const input = document.createElement('input');
                     input.type = 'text';
                     input.id = 'textAnswer';
